commit do dia 28-05-2025